--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 }
 
 #jumboStyle {
-  background-color: lightgray;
+  background-color: forestgreen;
   padding: 15px;
   margin-bottom: 15px;
   border-bottom: black 5px solid;
@@ -46,4 +46,12 @@
 
 #searchStyle {
   padding: 5px;
+  margin: 10px;
+  border: 3px green solid;
+}
+
+#tableStyle {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 25px;
 }
